--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/lwinmoepaing/mse/blob/main/LICENSE"
+    }
+  ],
   "scripts": {
     "content:build": "contentlayer build",
     "prepare": "husky install",
