--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "contentlayer": "^0.3.4",
     "cz-customizable": "^7.0.0",
     "date-fns": "^2.30.0",
+    "framer-motion": "^10.16.4",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "next": "13.5.4",
     "next-contentlayer": "^0.3.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
     "rehype-autolink-headings": "^7.0.0",
     "rehype-pretty-code": "^0.10.1",
     "rehype-slug": "^6.0.0",
