--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     }
   },
   "dependencies": {
+    "@splinetool/react-spline": "^2.2.6",
     "clsx": "^2.0.0",
     "commitlint": "^17.7.2",
     "commitlint-config-gitmoji": "^2.3.1",
@@ -58,7 +59,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
-    "tailwindcss": "^3",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5"
   }
 }
