--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "rehype-pretty-code": "^0.10.1",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
+    "sass": "^1.69.4",
     "shiki": "^0.14.5",
     "tailwind-merge": "^1.14.0",
     "typed.js": "^2.0.16"
