--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     }
   },
   "dependencies": {
+    "@effect-ts/core": "^0.60.5",
+    "@opentelemetry/api": "^1.6.0",
     "clsx": "^2.0.0",
     "commitlint": "^17.7.2",
     "commitlint-config-gitmoji": "^2.3.1",
