--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "sass": "^1.69.4",
     "shiki": "^0.14.5",
     "tailwind-merge": "^1.14.0",
+    "three": "^0.157.0",
     "typed.js": "^2.0.16"
   },
   "devDependencies": {
