--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     }
   },
   "dependencies": {
+    "build": "^0.1.4",
     "clsx": "^2.0.0",
     "commitlint": "^17.7.2",
     "commitlint-config-gitmoji": "^2.3.1",
@@ -39,6 +40,7 @@
     "lint-staged": "^15.0.2",
     "next": "13.5.4",
     "next-contentlayer": "^0.3.4",
+    "package": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
@@ -58,7 +60,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
-    "tailwindcss": "^3",
+    "tailwindcss": "^3.3.4",
     "typescript": "^5"
   }
 }
