--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     }
   },
   "dependencies": {
+    "@react-three/drei": "^9.88.7",
+    "@react-three/fiber": "^8.15.8",
+    "@react-three/postprocessing": "^2.15.8",
     "@splinetool/react-spline": "^2.2.6",
+    "@types/three": "^0.158.0",
     "clsx": "^2.0.0",
     "commitlint": "^17.7.2",
     "commitlint-config-gitmoji": "^2.3.1",
@@ -49,8 +53,9 @@
     "remark-gfm": "^4.0.0",
     "sass": "^1.69.4",
     "shiki": "^0.14.5",
+    "suspend-react": "^0.1.3",
     "tailwind-merge": "^1.14.0",
-    "typed.js": "^2.0.16"
+    "three": "^0.158.0"
   },
   "devDependencies": {
     "@types/node": "^20",
